ansible-playbook/roles/kubernetes-app/traefik/traefik-ingress-kube-system.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  # - host: domain.com
    http:
      paths:
      - path: /traefik
        backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
      - path: /dashboard
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
      - path: /grafana
        backend:
          serviceName: monitoring-grafana
          servicePort: 80
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: 9090
