ansible-playbook/roles/kubernetes-app/traefik/traefik-ingress-nexus.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-traefik-ingress
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: traefik
    #traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /nexus
        backend:
          serviceName: nexus-service
          servicePort: 80
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 5000
